--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "private": true,
+  "author": "Mir Saheem Shafi",
+  "license": "ISC",
   "scripts": {
     "dev": "concurrently \"npx tsc -w\" \"nodemon -r dotenv/config dist/index.js\"",
     "build": "tsc",
@@ -23,7 +25,8 @@
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.7",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -42,7 +45,5 @@
     "eslint": "^8.53.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.2"
-  },
-  "author": "Mir Saheem Shafi",
-  "license": "ISC"
+  }
 }
