chore: add husky and commit lint

--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "husky": "^8.0.3",
     "prettier": "^3.1.0",
     "turbo": "latest"
   },
