--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -6,5 +6,13 @@ services:
       - 27017:27017
     volumes:
       - db_data:/data/db
+  redis:
+    image: redis
+    ports:
+      - 6379:6379
+    command: redis-server --save 20 1 --loglevel warning
+    volumes:
+      - redis_data:/data
 volumes:
   db_data:
+  redis_data:
