--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,6 +25,7 @@
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "redis": "^4.6.12",
     "tslib": "^2.6.2",
     "zod": "^3.22.4"
   },
