--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -44,6 +44,7 @@
     "@types/nodemailer": "^6.4.14",
     "eslint": "^8.53.0",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
