--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,13 @@
 **/node_modules
 **/.next
 **/dist
+node_modules
+npm-debug.log
+.vscode
+.husky
+.prettierignore
+.prettierrc
+.git
+.gitignore
+.eslintrc.js
+.commitlintrc.json
