chore: refactored dockerfile to take app as an arg to build the specific app

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:web": "node dist/web/server/server.mjs"
+    "start": "node dist/web/server/server.mjs"
   },
   "private": true,
   "dependencies": {
