--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -19,10 +19,15 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"],
+    "paths": {
+      "~/*": ["./src/*"],
+      "~auth/*": ["./src/app/auth/*"],
+      "~core/*": ["./src/app/core/*"],
+      "~feed/*": ["./src/app/feed/*"],
+      "~shared/*": ["./src/app/shared/*"],
+      "~watch/*": ["./src/app/watch/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
