--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.7",
+    "@ngneat/hot-toast": "6.1.0",
     "boxicons": "^2.1.4",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
